emulation: Fix escape sequences of normal and keypad Enter with modifiers

https://bugzilla.gnome.org/show_bug.cgi?id=743258